--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
 
         <activity
                 android:label="@string/app_name"
+                android:theme="@style/translucent_activity"
                 android:name=".HeyHoopActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -29,9 +30,7 @@
         <activity android:name="ListDbActivity">
         </activity>
 
-        <receiver
-                android:enabled="true"
-                android:name=".services.ServiceLaunchReceiver">
+        <receiver android:name=".services.ServiceLaunchReceiver">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED"/>
             </intent-filter>
