Działa jakoś Faller

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,8 +27,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="ListDbActivity">
-        </activity>
+        <activity android:name=".ListDbActivity"/>
+        <activity android:name=".faller.FallerActivity"/>
 
         <receiver android:name=".services.ServiceLaunchReceiver">
             <intent-filter>
@@ -39,6 +39,9 @@
         <receiver android:name=".appwidget.WidgetProvider">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE"/>
+            </intent-filter>
+            <intent-filter>
+                <action android:name="hey.hoop.APPWIDGET_UPDATE"/>
             </intent-filter>
             <meta-data android:name="android.appwidget.provider" android:resource="@xml/appwidget_info"/>
         </receiver>
