Bardzo ładne, działają ustawienia Fallera.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,6 @@
 
         <activity
                 android:label="@string/app_name"
-                android:theme="@style/translucent_activity"
                 android:name=".HeyHoopActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -33,6 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".faller.FallerPreferences"/>
 
         <receiver android:name=".services.ServiceLaunchReceiver">
             <intent-filter>
